--- a/VibeZMVC/Views/Dashboards/Index.cshtml
+++ b/VibeZMVC/Views/Dashboards/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome Kien</h1>
+    <h1 class="display-4">Welcome Trung Kien</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
