--- a/VibeZMVC/Views/Dashboards/Index.cshtml
+++ b/VibeZMVC/Views/Dashboards/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome Kien Le</h1>
+    <h1>Use this area to provide additional information.</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
