--- a/VibeZMVC/Views/Home/Index.cshtml
+++ b/VibeZMVC/Views/Home/Index.cshtml
@@ -235,22 +235,22 @@
                         <div class="collapse" id="sidebarEcommerce">
                             <ul class="side-nav-second-level">
                                 <li>
-                                    <a href="">User</a>
-                                </li>
-                                <li>
-                                    <a href="">Track</a>
-                                </li>
-                                <li>
                                     <a href="">Album</a>
                                 </li>
                                 <li>
                                     <a href="">Playlist</a>
                                 </li>
                                 <li>
+                                    <a href="">Tracks</a>
+                                </li>
+                                <li>
                                     <a href="">Artist</a>
                                 </li>
                                 <li>
                                     <a href="">?</a>
+                                </li>
+                                <li>
+                                    <a href="User">User</a>
                                 </li>
                     </li>
                 </ul>
@@ -262,7 +262,7 @@
                 <a href="javascript: void(0);" class="float-end close-btn btn">
                 </a>
                 <img src="assets/images/svg/help-icon.svg" height="90" alt="Helper Icon Image" />
-                <h5 class="mt-3">Web admin Le Trung Kien</h5>
+                <h5 class="mt-3">Web admin</h5>
                 <p class="mb-3">Tối ưu thời gian quản lý với UI mới.</p>
                 <a href="javascript: void(0);"></a>
                 <div class="text-center ">
