--- a/VibeZMVC/Views/Home/Index.cshtml
+++ b/VibeZMVC/Views/Home/Index.cshtml
@@ -235,19 +235,19 @@
                         <div class="collapse" id="sidebarEcommerce">
                             <ul class="side-nav-second-level">
                                 <li>
-                                    <a href="">Album</a>
+                                    <a href="Artist">Artist</a>
                                 </li>
                                 <li>
-                                    <a href="">Playlist</a>
+                                    <a href="Artwork">Artwork</a>
                                 </li>
                                 <li>
-                                    <a href="">Tracks</a>
+                                    <a href="Feedback">Feedback</a>
                                 </li>
                                 <li>
-                                    <a href="">Artist</a>
+                                    <a href="News">News</a>
                                 </li>
                                 <li>
-                                    <a href="">?</a>
+                                    <a href="Order">Order</a>
                                 </li>
                                 <li>
                                     <a href="User">User</a>
