--- a/src/components/LoginForm/LoginComponent.css
+++ b/src/components/LoginForm/LoginComponent.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100vh;
     margin: 0;
 }
 
@@ -26,6 +26,7 @@
 .login-title {
     font-size: 28px;
     margin-bottom: 30px;
+    font-weight: bold;
 }
 
 .login-option {
@@ -34,7 +35,7 @@
     border: 1px solid transparent;
     padding: 14px;
     margin-bottom: 12px;
-    width: 100%; /* Đặt chiều rộng là 100% */
+    width: 100%; 
     display: flex;
     align-items: center;
     justify-content: center;
@@ -55,11 +56,11 @@
 }
 
 .input-group {
-    width: 100%; /* Đặt chiều rộng là 100% */
+    width: 100%; 
 }
 
 .input-group input[type="text"], input[type="password"] {
-    width: 100%; /* Đặt chiều rộng là 100% */
+    width: 100%;
     padding: 14px;
     background-color: #2a2a2a;
     border: 1px solid transparent;
@@ -95,7 +96,7 @@ input[type="text"]:focus, input[type="password"]:focus {
     background-color: #1ed760;
     color: black;
     padding: 16px;
-    width: 100%; /* Đặt chiều rộng là 100% */
+    width: 100%; 
     border: 1px solid transparent;
     border-radius: 25px;
     cursor: pointer;
@@ -103,6 +104,7 @@ input[type="text"]:focus, input[type="password"]:focus {
     font-size: 18px;
     margin-top: 25px;
     transition: border-color 0.3s ease;
+    margin-bottom: 20px;
 }
 
 .login-button:hover {
@@ -120,4 +122,8 @@ input[type="text"]:focus, input[type="password"]:focus {
 
 .signup-prompt {
     color: #a7a7a7;
+}
+.google-login {
+    display: flex;
+    justify-content: center;
 }
