Crud track + album

--- a/src/components/Artist/music.css
+++ b/src/components/Artist/music.css
@@ -1,4 +1,4 @@
-/* Áp dụng toàn bộ style vào class app-container thay vì body */
+Áp dụng toàn bộ style vào class app-container thay vì body
 .app-container {
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
